# spliceai-mlx

./: .gitignore  README.md  pyproject.toml
spliceai_mlx/: __init__.py  __main__.py  utils.py
spliceai_mlx/models/: spliceai1.npz  spliceai2.npz  spliceai3.npz  spliceai4.npz  spliceai5.npz
tests/: test_delta_score.py
