[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spliceai-mlx"
version = "1.3.1"
description = "SpliceAI: A deep learning-based tool to identify splice variants (MLX backend)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPLv3" }
authors = [{ name = "Kishore Jaganathan", email = "kishorejaganathan@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.16.0",
    "pyfaidx>=0.5.0",
    "pysam>=0.10.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/illumina/SpliceAI"

[project.scripts]
spliceai-mlx = "spliceai_mlx.__main__:main"
